@@ -1063,7 +1063,8 @@
         "Kindergarten 3",
         "Balatro",
         "Karlson",
-        "Yandere Simulator"
+        "Yandere Simulator",
+        "Bendy and the Ink Machine"
     ],
     "Horror": [
         "Baldi's Basics in Education and Learning",
@@ -1072,7 +1073,8 @@
         "Five Nights at Freddy's 2",
         "Five Nights at Freddy's 3",
         "Five Nights at Freddy's 4",
-        "Granny"
+        "Granny",
+        "Bendy and the Ink Machine"
     ],
     "Shooting": [
         "Counter Strike",
@@ -1094,7 +1096,8 @@
         "Funny Shooter",
         "Funny Shooter 2",
         "Ragdoll Archers",
-        "Getaway Shootout"
+        "Getaway Shootout",
+        "Karlson"
     ],
     "Classic": [
         "Angry Birds",
