@@ -23,12 +23,15 @@ tion.
 11/1/2025:
 [!] Hey again! Sorry for such a delay on the update, I've been a little busy
 but I'm back.
+[!] Shoutout to GN Math! Without them I wouldn't have these exclusive games!
+:D
 [+] Added Kindergarten 1
 [+] Added Kindergarten 2
 [+] Added Kindergarten 3
 [+] Added Balatro
 [+] Added Karlson
 [+] Added Yandere Simulator
+[+] Added Bendy and the Ink Machine
 [-] Removed the survey banner as it isn't needed anymore (thanks for all
 the feedback!)
 
